--- a/frontend/src/components/Schedule.css
+++ b/frontend/src/components/Schedule.css
@@ -3,7 +3,7 @@
     overflow-y: scroll;
     /*height: 90%;*/
     /*width: 100%;*/
-    max-height: 100vh;
+    max-height:100%;
 }
 
 
@@ -21,6 +21,7 @@ th {
     position: sticky;
     top: 0px;
     box-shadow: 4px 8px 8px lightgray;
+    user-select: none;
 }
 
 #category_component1 {
